# WordSeek

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
aiostardict/: __init__.py  errors.py  models.py
aiostardict/files/: __init__.py  _dict.py  _idx.py  _ifo.py  _paths.py
build_aux/flatpak/: MANIFEST.yml  build-requirements.txt
build_aux/res/share/applications/: io.github.abukharov268.WordSeek.desktop
build_aux/res/share/metainfo/: io.github.abukharov268.WordSeek.metainfo.xml
gnome_word_seek/: app.py  ccs.py  gasync.py  treeutil.py  typings.py
gnome_word_seek/components/: dicts.py  history.py  imports.py  page.py  scroll.py  search.py  suggestion.py
gnome_word_seek/formats/: xdxf.py
gnome_word_seek/res/ui/: dictionaries_page.ui  import_dialog.ui  project.cmb  window.ui
tests/aiostardict/: test_read_info.py
typings/: async_lru.pyi  gi.events.pyi
word_seek/: importer.py  rxutil.py
word_seek/cli/: app.py
word_seek/cli/commands/: __init__.py  dicts.py  history.py  imports.py  search.py  wipeout.py
word_seek/cli/components/: __init__.py
word_seek/cli/components/history/: __init__.py  _ctrl.py
word_seek/cli/formats/: xdxf.py
word_seek/db/: config.py  decorators.py  exec.py  imports.py  migrating.py  models.py  queries.py  repo.py  scaffold.py
word_seek/db/alembic/: env.py
word_seek/eventsrc/: autocomplete.py
word_seek/eventsrc/input/: __init__.py  _key_input.py  keys.py  models.py
word_seek/formats/: visitor.py
word_seek/utils/: collections.py  files.py  models.py  typing.py
word_seek/utils/orm/: sqlite.py
(+7 files in other folders)
